--- a/app/styles/sass/layout/nav.scss
+++ b/app/styles/sass/layout/nav.scss
@@ -1,6 +1,18 @@
 nav{
-	position: absolute;
+	position: relative;
 	height: 40px;
 	width: 100%;
 	background-color: #134580;
+
+
+	.nav-button-list {
+		
+
+		.nav-button {
+			position: relative;
+			float: left;
+			margin: 5px;
+		}
+
+	}
 }
