--- a/app/styles/sass/layout/nav.scss
+++ b/app/styles/sass/layout/nav.scss
@@ -1,18 +1,29 @@
-nav{
-	position: relative;
-	height: 40px;
-	width: 100%;
-	background-color: #134580;
+nav {
+    position: relative;
+    height: 40px;
+    width: 100%;
+    background-color: white;
+    
+    -webkit-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+-moz-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
 
+    .nav-button-list {
+        position: absolute;
+        left: 60px;
+        top: 7px;
 
-	.nav-button-list {
-		
+        .nav-button {
+            position: relative;
+            float: left;
+            margin: 5px;
+        }
+    }
 
-		.nav-button {
-			position: relative;
-			float: left;
-			margin: 5px;
-		}
-
-	}
+    .actions-container {
+		position: absolute;
+		right: 0px;
+		margin-right: 60px;
+		top: 13px;
+    }
 }
