--- a/app/styles/sass/layout/nav.scss
+++ b/app/styles/sass/layout/nav.scss
@@ -3,7 +3,7 @@ nav {
     height: 40px;
     width: 100%;
     background-color: white;
-    
+    z-index: 500000000;
     -webkit-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
 -moz-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
 box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
