--- a/app/styles/sass/components/ProductContainer.scss
+++ b/app/styles/sass/components/ProductContainer.scss
@@ -25,7 +25,7 @@
             position: relative;
             width: auto;
             height: 100%;
-            background-color: lightblue;
+            background-color: #C1DFFF;
             padding: 10px;
             border-radius: 3px;
         }
