--- a/app/styles/sass/base.scss
+++ b/app/styles/sass/base.scss
@@ -60,16 +60,30 @@ table {
 
 a {
     color: inherit;
+    text-decoration: none;
 }
 
 a:visited {
     color: inherit;
+    text-decoration: none;
 }
 
 a:hover {
     color: inherit;
+    text-decoration: none;
 }
 
 a:active {
     color: inherit;
+    text-decoration: none;
+}
+
+
+h2{ 
+    position: relative;
+    font-size: 1.6rem;
+    font-weight: 600;
+    margin: 10px auto;
+    color: black;
+    text-align: center;
 }
