--- a/app/styles/sass/layout/nav.scss
+++ b/app/styles/sass/layout/nav.scss
@@ -1,17 +1,18 @@
 nav {
     position: relative;
-    height: 40px;
+    height: 60px;
     width: 100%;
     background-color: white;
     z-index: 500000000;
     -webkit-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
--moz-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+    -moz-box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+    box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
+    transition: background-color 0.5s;
 
     .nav-button-list {
         position: absolute;
         left: 60px;
-        top: 7px;
+        top: 18px;
 
         .nav-button {
             position: relative;
@@ -24,6 +25,6 @@ box-shadow: 0px 0px 7px -2px rgba(0,0,0,0.75);
 		position: absolute;
 		right: 0px;
 		margin-right: 60px;
-		top: 13px;
+		top: 23px;
     }
 }
