--- a/app/styles/sass/layout/page.scss
+++ b/app/styles/sass/layout/page.scss
@@ -7,8 +7,9 @@
 }
 
 .content-container {
-    position: relative;
-    height: calc(100% - 40px);
+    position: absolute;
+    top: 60px;
+    height: calc(100% - 60px);
     width: 100%;
     left: 0%;
     margin: 0 auto;
