--- a/app/styles/sass/layout/admin.scss
+++ b/app/styles/sass/layout/admin.scss
@@ -64,5 +64,20 @@
         .add-images-container{
             position: relative;
         }
+
+        .media-container{
+            position: relative;
+            width: 300px;
+            height: 100px;
+
+            .media-item{
+                position: relative;
+                height: 100px;
+                width: 100px;
+                margin: 10px;
+                display: inline-block;
+                float: left
+            }
+        }
     }
 }
