--- a/app/styles/sass/base.scss
+++ b/app/styles/sass/base.scss
@@ -1,5 +1,7 @@
 @import "_vars";
 
+$page_fade_in: fadein 1s;
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -32,6 +34,15 @@ footer, header, hgroup, menu, nav, section {
 
 html, body {
     line-height: 1;
+}
+
+
+body{
+    animation: $page_fade_in;
+    -webkit-animation: $page_fade_in;
+    -moz-animation: $page_fade_in;
+    -o-animation: $page_fade_in;
+    -ms-animation: $page_fade_in
 }
 
 ol, ul {
@@ -86,4 +97,59 @@ h2{
     margin: 10px auto;
     color: black;
     text-align: center;
+}
+
+
+@keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Firefox < 16 */
+@-moz-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Safari, Chrome and Opera > 12.1 */
+@-webkit-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Internet Explorer */
+@-ms-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
+}
+
+/* Opera < 12.1 */
+@-o-keyframes fadein {
+    from {
+        opacity: 0;
+    }
+
+    to {
+        opacity: 1;
+    }
 }
